--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   "author": "Roberto Butti <roberto.butti@h-art.com>",
   "license": "MIT",
   "dependencies": {
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-stage-2": "^6.22.0",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2"
   }
