--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-2": "^6.22.0",
+    "css-loader": "^0.28.3",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.5",
+    "vue": "^2.3.3",
+    "vue-loader": "^12.2.0",
+    "vue-template-compiler": "^2.3.3",
+    "vue-template-loader": "^0.3.1",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2"
   }
